--- a/index.html
+++ b/index.html
@@ -76,9 +76,120 @@
   </div>
   <!-- End Landing -->
   <!-- Start Article -->
-  <div class="article">
+  <div class="article" id="article">
+    <div class="main-title">ARTICLE</div>
     <div class="container">
-      
+      <div class="card">
+        <div class="image">
+          <img src="media/cat-01.jpg" alt="">
+        </div>
+        <div class="text">
+          <h1>Test Title</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+        </div>
+        <div class="read-more">
+          <h3>Read More</h3>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/cat-02.jpg" alt="">
+        </div>
+        <div class="text">
+          <h1>Test Title</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+        </div>
+        <div class="read-more">
+          <h3>Read More</h3>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/cat-03.jpg" alt="">
+        </div>
+        <div class="text">
+          <h1>Test Title</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+        </div>
+        <div class="read-more">
+          <h3>Read More</h3>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/cat-04.jpg" alt="">
+        </div>
+        <div class="text">
+          <h1>Test Title</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+        </div>
+        <div class="read-more">
+          <h3>Read More</h3>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/cat-05.jpg" alt="">
+        </div>
+        <div class="text">
+          <h1>Test Title</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+        </div>
+        <div class="read-more">
+          <h3>Read More</h3>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/cat-06.jpg" alt="">
+        </div>
+        <div class="text">
+          <h1>Test Title</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+        </div>
+        <div class="read-more">
+          <h3>Read More</h3>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/cat-07.jpg" alt="">
+        </div>
+        <div class="text">
+          <h1>Test Title</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+        </div>
+        <div class="read-more">
+          <h3>Read More</h3>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/cat-08.jpg" alt="">
+        </div>
+        <div class="text">
+          <h1>Test Title</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+        </div>
+        <div class="read-more">
+          <h3>Read More</h3>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </div>
     </div>
   </div>
   <!-- End Article -->
