Start Gallery Section

--- a/index.html
+++ b/index.html
@@ -193,5 +193,13 @@
     </div>
   </div>
   <!-- End Article -->
+  <!-- Start Gallery -->
+  <div class="gallery" id="gallery">
+    <div class="main-title">GALLERY</div>
+    <div class="container">
+      
+    </div>
+  </div>
+  <!-- Start Gallery -->
 </body>
 </html>
