--- a/index.html
+++ b/index.html
@@ -197,9 +197,91 @@
   <div class="gallery" id="gallery">
     <div class="main-title">GALLERY</div>
     <div class="container">
-      
+      <div class="box">
+        <div class="image">
+          <img src="media/gallery-01.png" alt="">
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="image">
+          <img src="media/gallery-02.png" alt="">
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="image">
+          <img src="media/gallery-03.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="image">
+          <img src="media/gallery-04.png" alt="">
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="image">
+          <img src="media/gallery-05.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="image">
+          <img src="media/gallery-06.png" alt="">
+        </div>
+      </div>
+
     </div>
   </div>
   <!-- Start Gallery -->
+  <!-- Start features -->
+  <div class="features" id="features">
+    <div class="main-title">FEATURES</div>
+    <div class="container">
+
+      <div class="box quality">
+        <div class="image">
+          <img src="media/features-01.jpg" alt="">
+        </div>
+        <div class="details">
+          <h1>Quality</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima.
+          </p>
+        </div>
+        <a href="#more"><button>More</button></a>
+      </div>
+
+      <div class="box time">
+        <div class="image">
+          <img src="media/features-02.jpg" alt="">
+        </div>
+        <div class="details">
+          <h1>Time</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima.
+          </p>
+        </div>
+        <a href="#more"><button>More</button></a>
+      </div>
+
+      <div class="box passion">
+        <div class="image">
+          <img src="media/features-03.jpg" alt="">
+        </div>
+        <div class="details">
+          <h1>Passion</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima.
+          </p>
+        </div>
+        <a href="#more"><button>More</button></a>
+      </div>
+
+    </div>
+  </div>
+  <!-- End features -->
 </body>
 </html>
