Start Testimonials Section

--- a/index.html
+++ b/index.html
@@ -251,7 +251,9 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima.
           </p>
         </div>
-        <a href="#more"><button>More</button></a>
+        <div class="btn">
+          <a href="#more"><button>More</button></a>
+        </div>
       </div>
 
       <div class="box time">
@@ -264,7 +266,9 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima.
           </p>
         </div>
-        <a href="#more"><button>More</button></a>
+        <div class="btn">
+          <a href="#more"><button>More</button></a>
+        </div>
       </div>
 
       <div class="box passion">
@@ -277,11 +281,34 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima.
           </p>
         </div>
-        <a href="#more"><button>More</button></a>
+        <div class="btn">
+          <a href="#more"><button>More</button></a>
+        </div>
       </div>
 
     </div>
   </div>
   <!-- End features -->
+  <!-- Start Testimonials -->
+  <div class="testimonials" id="testimonials">
+    <div class="main-title">TESTIMONIALS</div>
+    <div class="container">
+      <div class="card">
+        <div class="image">
+          <img src="media/avatar-01.png" alt="">
+        </div>
+        <h3>Elzero Osama</h3>
+        <p>Full Stack Developer</p>
+        <div class="stars">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Testimonials -->
 </body>
 </html>
