Add Testimonials Section

--- a/index.html
+++ b/index.html
@@ -293,12 +293,13 @@
   <div class="testimonials" id="testimonials">
     <div class="main-title">TESTIMONIALS</div>
     <div class="container">
+
       <div class="card">
         <div class="image">
           <img src="media/avatar-01.png" alt="">
         </div>
         <h3>Elzero Osama</h3>
-        <p>Full Stack Developer</p>
+        <p class="specialty">Full Stack Developer</p>
         <div class="stars">
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
@@ -306,9 +307,115 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
         </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Maiores et reiciendis voluptatum, 
+          amet est natus quaerat ducimus.
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/avatar-02.png" alt="">
+        </div>
+        <h3>Adam Tech</h3>
+        <p class="specialty">Front-End Developer</p>
+        <div class="stars">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Maiores et reiciendis voluptatum, 
+          amet est natus quaerat ducimus.
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/avatar-03.png" alt="">
+        </div>
+        <h3>Yahya Tech</h3>
+        <p class="specialty">Back-End Developer</p>
+        <div class="stars">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Maiores et reiciendis voluptatum, 
+          amet est natus quaerat ducimus.
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/avatar-04.png" alt="">
+        </div>
+        <h3>Isllam Codezilla</h3>
+        <p class="specialty">Python Web Developer</p>
+        <div class="stars">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Maiores et reiciendis voluptatum, 
+          amet est natus quaerat ducimus.
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/avatar-05.png" alt="">
+        </div>
+        <h3>Tim Tech</h3>
+        <p class="specialty">Software Engineering</p>
+        <div class="stars">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Maiores et reiciendis voluptatum, 
+          amet est natus quaerat ducimus.
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="image">
+          <img src="media/avatar-06.png" alt="">
+        </div>
+        <h3>Hamza Sallem</h3>
+        <p class="specialty">Technical Team Lead</p>
+        <div class="stars">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Maiores et reiciendis voluptatum, 
+          amet est natus quaerat ducimus.
+        </p>
       </div>
     </div>
   </div>
   <!-- End Testimonials -->
+  
 </body>
 </html>
