--- a/index.html
+++ b/index.html
@@ -416,6 +416,140 @@
     </div>
   </div>
   <!-- End Testimonials -->
-  
+  <!-- Start Team Members -->
+  <div class="team">
+    <div class="main-title">TEAM MEMBERS</div>
+    <div class="container">
+      <div class="box">
+        <div class="data">
+          <img src="media/team-01.jpg" alt="">
+          <div class="social">
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </div>
+        <div class="deatials">
+          <h1>Name</h1>
+          <p>Simple Short Description</p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="data">
+          <img src="media/team-02.jpg" alt="">
+          <div class="social">
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </div>
+        <div class="deatials">
+          <h1>Name</h1>
+          <p>Simple Short Description</p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="data">
+          <img src="media/team-03.jpg" alt="">
+          <div class="social">
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </div>
+        <div class="deatials">
+          <h1>Name</h1>
+          <p>Simple Short Description</p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="data">
+          <img src="media/team-04.jpg" alt="">
+          <div class="social">
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </div>
+        <div class="deatials">
+          <h1>Name</h1>
+          <p>Simple Short Description</p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="data">
+          <img src="media/team-05.png" alt="">
+          <div class="social">
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </div>
+        <div class="deatials">
+          <h1>Name</h1>
+          <p>Simple Short Description</p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="data">
+          <img src="media/team-06.png" alt="">
+          <div class="social">
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </div>
+        <div class="deatials">
+          <h1>Name</h1>
+          <p>Simple Short Description</p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="data">
+          <img src="media/team-07.jpg" alt="">
+          <div class="social">
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </div>
+        <div class="deatials">
+          <h1>Name</h1>
+          <p>Simple Short Description</p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="data">
+          <img src="media/team-08.jpg" alt="">
+          <div class="social">
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </div>
+        <div class="deatials">
+          <h1>Name</h1>
+          <p>Simple Short Description</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <!-- End Team Members -->
 </body>
 </html>
