--- a/index.html
+++ b/index.html
@@ -417,21 +417,21 @@
   </div>
   <!-- End Testimonials -->
   <!-- Start Team Members -->
-  <div class="team">
+  <div class="team" id="team">
     <div class="main-title">TEAM MEMBERS</div>
     <div class="container">
       <div class="box">
         <div class="data">
           <img src="media/team-01.jpg" alt="">
           <div class="social">
-            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
-        <div class="deatials">
-          <h1>Name</h1>
+        <div class="details">
+          <h3>Name</h3>
           <p>Simple Short Description</p>
         </div>
       </div>
@@ -446,8 +446,8 @@
             <a href=""><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
-        <div class="deatials">
-          <h1>Name</h1>
+        <div class="details">
+          <h3>Name</h3>
           <p>Simple Short Description</p>
         </div>
       </div>
@@ -462,8 +462,8 @@
             <a href=""><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
-        <div class="deatials">
-          <h1>Name</h1>
+        <div class="details">
+          <h3>Name</h3>
           <p>Simple Short Description</p>
         </div>
       </div>
@@ -478,8 +478,8 @@
             <a href=""><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
-        <div class="deatials">
-          <h1>Name</h1>
+        <div class="details">
+          <h3>Name</h3>
           <p>Simple Short Description</p>
         </div>
       </div>
@@ -494,8 +494,8 @@
             <a href=""><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
-        <div class="deatials">
-          <h1>Name</h1>
+        <div class="details">
+          <h3>Name</h3>
           <p>Simple Short Description</p>
         </div>
       </div>
@@ -510,8 +510,8 @@
             <a href=""><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
-        <div class="deatials">
-          <h1>Name</h1>
+        <div class="details">
+          <h3>Name</h3>
           <p>Simple Short Description</p>
         </div>
       </div>
@@ -526,8 +526,8 @@
             <a href=""><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
-        <div class="deatials">
-          <h1>Name</h1>
+        <div class="details">
+          <h3>Name</h3>
           <p>Simple Short Description</p>
         </div>
       </div>
@@ -542,8 +542,8 @@
             <a href=""><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
-        <div class="deatials">
-          <h1>Name</h1>
+        <div class="details">
+          <h3>Name</h3>
           <p>Simple Short Description</p>
         </div>
       </div>
