--- a/index.html
+++ b/index.html
@@ -551,5 +551,59 @@
     </div>
   </div>
   <!-- End Team Members -->
+  <!-- Start Services -->
+  <div class="services" id="services">
+    <div class="main-title">Services</div>
+    <div class="container">
+      <div class="box">
+        <i class="fa-solid fa-user-shield fa-4x"></i>
+        <h3>Security</h3>
+        <div class="info">
+          <a href="#">Details</a>
+        </div>
+      </div>
+
+      <div class="box">
+        <i class="fa-solid fa-screwdriver-wrench fa-4x"></i>
+        <h3>Fixing Issues</h3>
+        <div class="info">
+          <a href="#">Details</a>
+        </div>
+      </div>
+
+      <div class="box">
+        <i class="fas fa-map-marked-alt fa-4x"></i>
+        <h3>Location</h3>
+        <div class="info">
+          <a href="#">Details</a>
+        </div>
+      </div>
+
+      <div class="box">
+        <i class="fas fa-laptop-code fa-4x"></i>
+        <h3>Coding</h3>
+        <div class="info">
+          <a href="#">Details</a>
+        </div>
+      </div>
+
+      <div class="box">
+        <i class="fas fa-palette fa-4x"></i>
+        <h3>Design</h3>
+        <div class="info">
+          <a href="#">Details</a>
+        </div>
+      </div>
+
+      <div class="box">
+        <i class="fas fa-bullhorn fa-4x"></i>
+        <h3>Marketion</h3>
+        <div class="info">
+          <a href="#">Details</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Services -->
 </body>
 </html>
