--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <div class="container">
       <div class="box">
         <div class="data">
-          <img src="media/team-01.jpg" alt="">
+          <img src="media/teamOne.png" alt="">
           <div class="social">
             <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="https://www.x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
@@ -438,7 +438,7 @@
 
       <div class="box">
         <div class="data">
-          <img src="media/team-02.jpg" alt="">
+          <img src="media/teamTwo.png" alt="">
           <div class="social">
             <a href=""><i class="fa-brands fa-facebook-f"></i></a>
             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
@@ -454,7 +454,7 @@
 
       <div class="box">
         <div class="data">
-          <img src="media/team-03.jpg" alt="">
+          <img src="media/teamThree.png" alt="">
           <div class="social">
             <a href=""><i class="fa-brands fa-facebook-f"></i></a>
             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
@@ -470,7 +470,7 @@
 
       <div class="box">
         <div class="data">
-          <img src="media/team-04.jpg" alt="">
+          <img src="media/teamFour.png" alt="">
           <div class="social">
             <a href=""><i class="fa-brands fa-facebook-f"></i></a>
             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
@@ -486,7 +486,7 @@
 
       <div class="box">
         <div class="data">
-          <img src="media/team-05.png" alt="">
+          <img src="media/teamOne.png" alt="">
           <div class="social">
             <a href=""><i class="fa-brands fa-facebook-f"></i></a>
             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
@@ -502,7 +502,7 @@
 
       <div class="box">
         <div class="data">
-          <img src="media/team-06.png" alt="">
+          <img src="media/teamThree.png" alt="">
           <div class="social">
             <a href=""><i class="fa-brands fa-facebook-f"></i></a>
             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
@@ -518,7 +518,7 @@
 
       <div class="box">
         <div class="data">
-          <img src="media/team-07.jpg" alt="">
+          <img src="media/teamTwo.png" alt="">
           <div class="social">
             <a href=""><i class="fa-brands fa-facebook-f"></i></a>
             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
@@ -534,7 +534,7 @@
 
       <div class="box">
         <div class="data">
-          <img src="media/team-08.jpg" alt="">
+          <img src="media/teamFour.png" alt="">
           <div class="social">
             <a href=""><i class="fa-brands fa-facebook-f"></i></a>
             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
@@ -605,5 +605,43 @@
     </div>
   </div>
   <!-- End Services -->
+  <!-- Start Skills -->
+  <div class="our-skills">
+    <div class="main-title">SKILLS</div>
+    <div class="container">
+      <img src="media/skills.png" alt="">
+      <div class="skills">
+
+        <div class="skill">
+          <h3>PYTHON <span>80%</span></h3>
+          <div class="progress">
+            <span style="width: 80%"></span>
+          </div>
+        </div>
+
+        <div class="skill">
+          <h3>HTML <span>85%</span></h3>
+          <div class="progress">
+            <span style="width: 85%"></span>
+          </div>
+        </div>
+
+        <div class="skill">
+          <h3>CSS <span>80%</span></h3>
+          <div class="progress">
+            <span style="width: 80%"></span>
+          </div>
+        </div>
+
+        <div class="skill">
+          <h3>JavaScript <span>75%</span></h3>
+          <div class="progress">
+            <span style="width: 75%"></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Skills -->
 </body>
 </html>
