Start Events Section

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
   </div>
   <!-- End Services -->
   <!-- Start Skills -->
-  <div class="our-skills">
+  <div class="our-skills" id="skills">
     <div class="main-title">SKILLS</div>
     <div class="container">
       <img src="media/skills.png" alt="">
@@ -643,5 +643,58 @@
     </div>
   </div>
   <!-- End Skills -->
+  <!-- Start How It Works -->
+  <div class="how-works" id="works">
+    <div class="main-title">HOW IT WORKS</div>
+    <div class="container">
+      <img class="main-img" src="media/work-steps.png" alt="">
+      <div class="boxes">
+
+        <div class="box">
+          <img src="media/work-steps-1.png" alt="">
+          <div class="info">
+            <h3>Business Analysis</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+            </p>
+          </div>
+        </div>
+
+        <div class="box">
+          <img src="media/work-steps-2.png" alt="">
+          <div class="info">
+            <h3>Architecture</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+            </p>
+          </div>
+        </div>
+
+        <div class="box">
+          <img src="media/work-steps-3.png" alt="">
+          <div class="info">
+            <h3>Developement</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!-- End How It Works -->
+  <!-- Start Latest Events -->
+  <div class="events" id="events">
+    <div class="main-title">Latest Events</div>
+    <div class="container">
+      <img src="media/events.png" alt="">
+      
+    </div>
+  </div>
+  <!-- End Latest Events -->
 </body>
 </html>
