--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
           </div>
         </div>
         <div class="details">
-          <h3>Name</h3>
-          <p>Simple Short Description</p>
+          <h3>Alex Johnson</h3>
+          <p>Frontend developer, design-focused.</p>
         </div>
       </div>
 
@@ -447,8 +447,8 @@
           </div>
         </div>
         <div class="details">
-          <h3>Name</h3>
-          <p>Simple Short Description</p>
+          <h3>Sophia Martinez</h3>
+          <p>Backend expert, database guru.</p>
         </div>
       </div>
 
@@ -463,8 +463,8 @@
           </div>
         </div>
         <div class="details">
-          <h3>Name</h3>
-          <p>Simple Short Description</p>
+          <h3>Ethan Lee</h3>
+          <p>DevOps specialist, cloud architect.</p>
         </div>
       </div>
 
@@ -479,8 +479,8 @@
           </div>
         </div>
         <div class="details">
-          <h3>Name</h3>
-          <p>Simple Short Description</p>
+          <h3>Olivia Brown</h3>
+          <p>UX designer, user-centric thinker.</p>
         </div>
       </div>
 
@@ -495,8 +495,8 @@
           </div>
         </div>
         <div class="details">
-          <h3>Name</h3>
-          <p>Simple Short Description</p>
+          <h3>James Patel</h3>
+          <p>Full-stack developer, problem solver.</p>
         </div>
       </div>
 
@@ -511,8 +511,8 @@
           </div>
         </div>
         <div class="details">
-          <h3>Name</h3>
-          <p>Simple Short Description</p>
+          <h3>Liam Wilson</h3>
+          <p>QA engineer, detail-oriented tester.</p>
         </div>
       </div>
 
@@ -527,8 +527,8 @@
           </div>
         </div>
         <div class="details">
-          <h3>Name</h3>
-          <p>Simple Short Description</p>
+          <h3>Emma Davis</h3>
+          <p>Software architect, solution planner.</p>
         </div>
       </div>
 
@@ -543,8 +543,8 @@
           </div>
         </div>
         <div class="details">
-          <h3>Name</h3>
-          <p>Simple Short Description</p>
+          <h3>Mia Anderson</h3>
+          <p>Data analyst, insights generator.</p>
         </div>
       </div>
 
@@ -692,7 +692,12 @@
     <div class="main-title">Latest Events</div>
     <div class="container">
       <img src="media/events.png" alt="">
-      
+      <div class="info">
+        <div class="unit">
+          <span>08</span>
+          <span>Days</span>
+        </div>
+      </div>
     </div>
   </div>
   <!-- End Latest Events -->
