--- a/index.html
+++ b/index.html
@@ -693,10 +693,42 @@
     <div class="container">
       <img src="media/events.png" alt="">
       <div class="info">
-        <div class="unit">
-          <span>08</span>
-          <span>Days</span>
+        <div class="time">
+
+          <div class="unit">
+            <span>15</span>
+            <span>Days</span>
+          </div>
+
+          <div class="unit">
+            <span>08</span>
+            <span>Hours</span>
+          </div>
+
+          <div class="unit">
+            <span>45</span>
+            <span>Minutes</span>
+          </div>
+
+          <div class="unit">
+            <span>55</span>
+            <span>Secondes</span>
+          </div>
         </div>
+        <div class="text">
+          <h3>Tech Masters Event 2025</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Et vero tenetur doloremque iusto ut adipisci quam ratione
+            aliquam excepturi nulla in harum, veritatis porro.
+          </p>
+        </div>
+      </div>
+      <div class="subscribe">
+        <form action="">
+          <input type="email" name="mail" placeholder="Enter Your Email">
+          <input type="submit" value="Subscribe">
+        </form>
       </div>
     </div>
   </div>
