Add Events Section

--- a/index.html
+++ b/index.html
@@ -726,8 +726,10 @@
       </div>
       <div class="subscribe">
         <form action="">
+          <input type="text" name="name" placeholder="Enter Your Name">
           <input type="email" name="mail" placeholder="Enter Your Email">
-          <input type="submit" value="Subscribe">
+          <textarea name="info" id="" placeholder="Enter Something.."></textarea>
+          <input class="sub" type="submit" value="Subscribe">
         </form>
       </div>
     </div>
