Start Pricing Section

--- a/index.html
+++ b/index.html
@@ -735,5 +735,63 @@
     </div>
   </div>
   <!-- End Latest Events -->
+  <!-- Start Pracing -->
+  <div class="pricing" id="pricing">
+    <div class="main-title">Pricing Plans</div>
+    <div class="container">
+      <div class="card">
+        <div class="head">
+          <h3>Basic</h3>
+          <i class="fa-solid fa-server"></i>
+          <div class="price">$15</div>
+          <span>Per Month</span>
+        </div>
+        <ul class="info">
+          <li><i class="fa-solid fa-check"></i> 10GB HDD Space</li>
+          <li><i class="fa-solid fa-check"></i> 5 Email Addresses</li>
+          <li><i class="fa-solid fa-check"></i> 2 Subdomains</li>
+          <li><i class="fa-solid fa-check"></i> 4 Databases</li>
+          <li><i class="fa-solid fa-check"></i> Basic Support</li>
+        </ul>
+        <a href="#"><button>Choose Plan</button></a>
+      </div>
+
+      <div class="card popular">
+        <div class="label">Most Popular</div>
+        <div class="head">
+          <h3>Advanced</h3>
+          <i class="fa-solid fa-database"></i>
+          <div class="price">$25</div>
+          <span>Per Month</span>
+        </div>
+        <ul class="info">
+          <li><i class="fa-solid fa-check"></i> 50GB HDD Space</li>
+          <li><i class="fa-solid fa-check"></i> 15 Email Addresses</li>
+          <li><i class="fa-solid fa-check"></i> 3 Subdomains</li>
+          <li><i class="fa-solid fa-check"></i> 7 Databases</li>
+          <li><i class="fa-solid fa-check"></i> Advanced Support</li>
+        </ul>
+        <a href="#"><button>Choose Plan</button></a>
+      </div>
+
+      <div class="card">
+        <div class="head">
+          <h3>Professional</h3>
+          <i class="fa-solid fa-boxes-stacked"></i>
+          <div class="price">$45</div>
+          <span>Per Month</span>
+        </div>
+        <ul class="info">
+          <li><i class="fa-solid fa-check"></i> 100GB HDD Space</li>
+          <li><i class="fa-solid fa-check"></i> 25 Email Addresses</li>
+          <li><i class="fa-solid fa-check"></i> 5 Subdomains</li>
+          <li><i class="fa-solid fa-check"></i> 10 Databases</li>
+          <li><i class="fa-solid fa-check"></i> Professional Support</li>
+        </ul>
+        <a href="#"><button>Choose Plan</button></a>
+      </div>
+    </div>
+  </div>
+  <!-- End Pracing -->
 </body>
 </html>
