Update Landing Section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
   <!-- Start Header -->
   <!-- Start Landing -->
-  <div class="landing">
+  <div class="landing landing-v2">
       <div class="container">
         <div class="text">
           <h1>Welcome, To <span>DevNexus</span> World</h1>
