Add Top Videos Section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <!-- Start Header -->
-  <div class="header" id="header">
+  <div class="header .block" id="header">
     <div class="container">
       <a href="#" class="logo">DevNexus</a>
       <ul class="main-nav">
@@ -57,7 +57,7 @@
   </div>
   <!-- Start Header -->
   <!-- Start Landing -->
-  <div class="landing landing-v2">
+  <div class="landing .block">
       <div class="container">
         <div class="text">
           <h1>Welcome, To <span>DevNexus</span> World</h1>
@@ -76,7 +76,7 @@
   </div>
   <!-- End Landing -->
   <!-- Start Article -->
-  <div class="article" id="article">
+  <div class="article .block" id="article">
     <div class="main-title">ARTICLE</div>
     <div class="container">
       <div class="card">
@@ -194,7 +194,7 @@
   </div>
   <!-- End Article -->
   <!-- Start Gallery -->
-  <div class="gallery" id="gallery">
+  <div class="gallery .block" id="gallery">
     <div class="main-title">GALLERY</div>
     <div class="container">
       <div class="box">
@@ -237,7 +237,7 @@
   </div>
   <!-- Start Gallery -->
   <!-- Start features -->
-  <div class="features" id="features">
+  <div class="features .block" id="features">
     <div class="main-title">FEATURES</div>
     <div class="container">
 
@@ -290,7 +290,7 @@
   </div>
   <!-- End features -->
   <!-- Start Testimonials -->
-  <div class="testimonials" id="testimonials">
+  <div class="testimonials .block" id="testimonials">
     <div class="main-title">TESTIMONIALS</div>
     <div class="container">
 
@@ -417,7 +417,7 @@
   </div>
   <!-- End Testimonials -->
   <!-- Start Team Members -->
-  <div class="team" id="team">
+  <div class="team .block" id="team">
     <div class="main-title">TEAM MEMBERS</div>
     <div class="container">
       <div class="box">
@@ -552,7 +552,7 @@
   </div>
   <!-- End Team Members -->
   <!-- Start Services -->
-  <div class="services" id="services">
+  <div class="services .block" id="services">
     <div class="main-title">Services</div>
     <div class="container">
       <div class="box">
@@ -606,7 +606,7 @@
   </div>
   <!-- End Services -->
   <!-- Start Skills -->
-  <div class="our-skills" id="skills">
+  <div class="our-skills .block" id="skills">
     <div class="main-title">SKILLS</div>
     <div class="container">
       <img src="media/skills.png" alt="">
@@ -644,7 +644,7 @@
   </div>
   <!-- End Skills -->
   <!-- Start How It Works -->
-  <div class="how-works" id="works">
+  <div class="how-works .block" id="works">
     <div class="main-title">HOW IT WORKS</div>
     <div class="container">
       <img class="main-img" src="media/work-steps.png" alt="">
@@ -688,7 +688,7 @@
   </div>
   <!-- End How It Works -->
   <!-- Start Latest Events -->
-  <div class="events" id="events">
+  <div class="events .block" id="events">
     <div class="main-title">Latest Events</div>
     <div class="container">
       <img src="media/events.png" alt="">
@@ -736,7 +736,7 @@
   </div>
   <!-- End Latest Events -->
   <!-- Start Pracing -->
-  <div class="pricing" id="pricing">
+  <div class="pricing .block" id="pricing">
     <div class="main-title">Pricing Plans</div>
     <div class="container">
       <div class="card">
@@ -793,5 +793,60 @@
     </div>
   </div>
   <!-- End Pracing -->
+  <!-- Start Videos -->
+  <div class="videos">
+    <div class="main-title">TOP VIDEO</div>
+    <div class="container">
+
+      <div class="holder">
+        <div class="name">
+          Top Video
+          <i class="fas fa-random"></i>
+        </div>
+        <div class="list">
+          <div class="video">
+            <h4>How To Create Sub Domain</h4>
+            <span>05:34</span>
+          </div>
+
+          <div class="video">
+            <h4>Playing With The DNS</h4>
+            <span>10:21</span>
+          </div>
+
+          <div class="video">
+            <h4>Everything About The Virtual Hosts</h4>
+            <span>07:54</span>
+          </div>
+
+          <div class="video">
+            <h4>How To Monitor Your Website</h4>
+            <span>02:12</span>
+          </div>
+
+          <div class="video">
+            <h4>Uncharted Beating The Last Boss</h4>
+            <span>11:09</span>
+          </div>
+
+          <div class="video">
+            <h4>Ys Oath In Felghana Overview</h4>
+            <span>03:31</span>
+          </div>
+
+          <div class="video">
+            <h4>Ys Series All Games Ending</h4>
+            <span>08:10</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="preview">
+        <img src="media/video-preview.jpg" alt="">
+        <h4>Everything About Virtual Hosts</h4>
+      </div>
+    </div>
+  </div>
+  <!-- End Videos -->
 </body>
 </html>
