Add Awesome Stats Section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <!-- Start Header -->
-  <div class="header .block" id="header">
+  <div class="header" id="header">
     <div class="container">
       <a href="#" class="logo">DevNexus</a>
       <ul class="main-nav">
@@ -57,7 +57,7 @@
   </div>
   <!-- Start Header -->
   <!-- Start Landing -->
-  <div class="landing .block">
+  <div class="landing">
       <div class="container">
         <div class="text">
           <h1>Welcome, To <span>DevNexus</span> World</h1>
@@ -76,7 +76,7 @@
   </div>
   <!-- End Landing -->
   <!-- Start Article -->
-  <div class="article .block" id="article">
+  <div class="article" id="article">
     <div class="main-title">ARTICLE</div>
     <div class="container">
       <div class="card">
@@ -194,7 +194,7 @@
   </div>
   <!-- End Article -->
   <!-- Start Gallery -->
-  <div class="gallery .block" id="gallery">
+  <div class="gallery" id="gallery">
     <div class="main-title">GALLERY</div>
     <div class="container">
       <div class="box">
@@ -237,7 +237,7 @@
   </div>
   <!-- Start Gallery -->
   <!-- Start features -->
-  <div class="features .block" id="features">
+  <div class="features" id="features">
     <div class="main-title">FEATURES</div>
     <div class="container">
 
@@ -290,7 +290,7 @@
   </div>
   <!-- End features -->
   <!-- Start Testimonials -->
-  <div class="testimonials .block" id="testimonials">
+  <div class="testimonials" id="testimonials">
     <div class="main-title">TESTIMONIALS</div>
     <div class="container">
 
@@ -417,7 +417,7 @@
   </div>
   <!-- End Testimonials -->
   <!-- Start Team Members -->
-  <div class="team .block" id="team">
+  <div class="team" id="team">
     <div class="main-title">TEAM MEMBERS</div>
     <div class="container">
       <div class="box">
@@ -552,7 +552,7 @@
   </div>
   <!-- End Team Members -->
   <!-- Start Services -->
-  <div class="services .block" id="services">
+  <div class="services" id="services">
     <div class="main-title">Services</div>
     <div class="container">
       <div class="box">
@@ -606,7 +606,7 @@
   </div>
   <!-- End Services -->
   <!-- Start Skills -->
-  <div class="our-skills .block" id="skills">
+  <div class="our-skills" id="skills">
     <div class="main-title">SKILLS</div>
     <div class="container">
       <img src="media/skills.png" alt="">
@@ -644,7 +644,7 @@
   </div>
   <!-- End Skills -->
   <!-- Start How It Works -->
-  <div class="how-works .block" id="works">
+  <div class="how-works" id="works">
     <div class="main-title">HOW IT WORKS</div>
     <div class="container">
       <img class="main-img" src="media/work-steps.png" alt="">
@@ -688,7 +688,7 @@
   </div>
   <!-- End How It Works -->
   <!-- Start Latest Events -->
-  <div class="events .block" id="events">
+  <div class="events" id="events">
     <div class="main-title">Latest Events</div>
     <div class="container">
       <img src="media/events.png" alt="">
@@ -726,10 +726,8 @@
       </div>
       <div class="subscribe">
         <form action="">
-          <input type="text" name="name" placeholder="Enter Your Name">
           <input type="email" name="mail" placeholder="Enter Your Email">
-          <textarea name="info" id="" placeholder="Enter Something.."></textarea>
-          <input class="sub" type="submit" value="Subscribe">
+          <input type="submit" value="Subscribe">
         </form>
       </div>
     </div>
@@ -848,5 +846,35 @@
     </div>
   </div>
   <!-- End Videos -->
+  <!-- Start Stats -->
+  <div class="stats" id="stats">
+    <div class="title">Our Awesome Stats</div>
+    <div class="container">
+      <div class="box">
+        <i class="far fa-user fa-2x fa-fw"></i>
+        <div class="number">150</div>
+        <div class="text">Clients</div>
+      </div>
+
+      <div class="box">
+        <i class="fas fa-code fa-2x fa-fw"></i>
+        <div class="number">135</div>
+        <div class="text">Projects</div>
+      </div>
+
+      <div class="box">
+        <i class="fas fa-globe-asia fa-2x fa-fw"></i>
+        <div class="number">50</div>
+        <div class="text">Countries</div>
+      </div>
+
+      <div class="box">
+        <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
+        <div class="number">500</div>
+        <div class="text">Money</div>
+      </div>
+    </div>
+  </div>
+  <!-- End Stats -->
 </body>
 </html>
