Start Discount Section

--- a/index.html
+++ b/index.html
@@ -876,5 +876,64 @@
     </div>
   </div>
   <!-- End Stats -->
+  <!-- Start Descount -->
+  <div class="discount" id="discount">
+    <div class="image">
+      <div class="content">
+        <h2>We Have A Discount</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Excepturi asperiores consectetur, recusandae ratione provident 
+          necessitatibus, cumque delectus commodi fuga praesentium beatae. 
+          Totam vel similique laborum dicta aperiam odit doloribus corporis.
+        </p>
+
+        <div class="card">
+          <div class="header">
+            <span class="logo">
+              <img src="media/logo.png" alt="">
+              <h5>Master Card</h5>
+            </span>
+            <img src="media/chip.png" alt="" class="chip">
+          </div>
+  
+          <div class="card-details">
+            <div class="name-number">
+              <h6>Card Number</h6>
+              <h5 class="number">#### #### #### ####</h5>
+            </div>
+  
+            <div class="valid-date">
+              <h5 class="name">Full Name</h5>
+              <div class="info">
+                <h6>Valid Thru</h6>
+                <h5>08/27</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="other-cards">
+        <i class="fa-brands fa-paypal"></i>
+        <i class="fa-brands fa-apple-pay"></i>
+        <i class="fa-brands fa-google-pay"></i>
+        <i class="fa-brands fa-amazon-pay"></i>
+      </div>
+    </div>
+    <div class="form">
+      <div class="content">
+        <h2>Request A Discount</h2>
+        <form action="">
+          <input class="input" type="text" placeholder="Your Name">
+          <input class="input" type="email" placeholder="Your Email">
+          <input class="input" type="text" placeholder="Your Phone">
+          <textarea class="input" name="message" placeholder="Tell Us About Your Needs"></textarea>
+          <input type="submit" value="Send">
+        </form>
+      </div>
+    </div>
+  </div>
+  <!-- End Descount -->
 </body>
 </html>
