--- a/index.html
+++ b/index.html
@@ -882,10 +882,9 @@
       <div class="content">
         <h2>We Have A Discount</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Excepturi asperiores consectetur, recusandae ratione provident 
-          necessitatibus, cumque delectus commodi fuga praesentium beatae. 
-          Totam vel similique laborum dicta aperiam odit doloribus corporis.
+          Take advantage of our special offer! Enjoy amazing
+          deals and exclusive discounts designed just for you. 
+          Don't miss out—shop now and save big on your favorite items!
         </p>
 
         <div class="card">
@@ -935,5 +934,62 @@
     </div>
   </div>
   <!-- End Descount -->
+  <!-- Start Footer -->
+  <div class="footer">
+    <div class="container">
+      <div class="box">
+        <h1>AdxmTech</h1>
+        <div class="icons">
+          <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing 
+          elit. Temporibus nulla rem, dignissimos iste aspernatur
+        </p>
+      </div>
+
+      <div class="box">
+        <ul class="links">
+          <li><a href="#">Important Link 1</a></li>
+          <li><a href="#">Important Link 2</a></li>
+          <li><a href="#">Important Link 3</a></li>
+          <li><a href="#">Important Link 4</a></li>
+          <li><a href="#">Important Link 5</a></li>
+        </ul>
+      </div>
+
+      <div class="box">
+        <div class="line">
+          <i class="fa-solid fa-location-dot"></i>
+          <h6>Algeria, Bourj Bourarij, Ras El Oued, Room Number 220</h6>
+        </div>
+        <div class="line">
+          <i class="fa-regular fa-clock"></i>
+          <h6>Business Hours: From 10:00 To 18:00</h6>
+        </div>
+        <div class="line">
+          <i class="fas fa-phone-volume fa-fw"></i>
+          <div class="phones">
+            <span>+20123456789</span>
+            <span>+20198765432</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="box">
+        <img src="media/gallery-01.png" alt="">
+        <img src="media/gallery-02.png" alt="">
+        <img src="media/gallery-03.jpg" alt="">
+        <img src="media/gallery-04.png" alt="">
+        <img src="media/gallery-05.jpg" alt="">
+        <img src="media/gallery-06.png" alt="">
+      </div>
+
+    </div>
+    <div class="copyright">Made With &lt;3 By AdxmTech</div>
+    </div>
+    <!-- End Footer -->
 </body>
 </html>
