Add Separators And Shapes

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
     </div>
   </div>
   <!-- End Article -->
+  <div class="spikes"></div>
   <!-- Start Gallery -->
   <div class="gallery" id="gallery">
     <div class="main-title">GALLERY</div>
@@ -289,6 +290,7 @@
     </div>
   </div>
   <!-- End features -->
+  <div class="spikes"></div>
   <!-- Start Testimonials -->
   <div class="testimonials" id="testimonials">
     <div class="main-title">TESTIMONIALS</div>
@@ -551,6 +553,7 @@
     </div>
   </div>
   <!-- End Team Members -->
+  <div class="spikes"></div>
   <!-- Start Services -->
   <div class="services" id="services">
     <div class="main-title">Services</div>
@@ -643,6 +646,7 @@
     </div>
   </div>
   <!-- End Skills -->
+  <div class="spikes"></div>
   <!-- Start How It Works -->
   <div class="how-works" id="works">
     <div class="main-title">HOW IT WORKS</div>
@@ -733,8 +737,9 @@
     </div>
   </div>
   <!-- End Latest Events -->
+  <div class="spikes"></div>
   <!-- Start Pracing -->
-  <div class="pricing .block" id="pricing">
+  <div class="pricing" id="pricing">
     <div class="main-title">Pricing Plans</div>
     <div class="container">
       <div class="card">
@@ -846,6 +851,7 @@
     </div>
   </div>
   <!-- End Videos -->
+  <div class="spikes"></div>
   <!-- Start Stats -->
   <div class="stats" id="stats">
     <div class="title">Our Awesome Stats</div>
