--- a/index.html
+++ b/index.html
@@ -740,6 +740,8 @@
   <div class="spikes"></div>
   <!-- Start Pracing -->
   <div class="pricing" id="pricing">
+    <div class="dots dots-up"></div>
+    <div class="dots dots-down"></div>
     <div class="main-title">Pricing Plans</div>
     <div class="container">
       <div class="card">
