--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="text">
           <h1>Test Title</h1>
-          <p>Lorem ipsum dolor sign amet consectetur, adipisicing elit. Reprehenderit</p>
+          <p>Lorem europ dolor sign amet consectetur, adipisicing elit. Reprehenderit</p>
         </div>
         <div class="read-more">
           <h3>Read More</h3>
