Update paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="text">
           <h1>Test Title</h1>
-          <p>Lorem ipsum dolor sign amet consectetur, adipisicing elit. Reprehenderit</p>
+          <p>Lorem ipsum dolor sign of one thusand consectetur, adipisicing elit. Reprehenderit</p>
         </div>
         <div class="read-more">
           <h3>Read More</h3>
