--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DevNexus</title>
 
-  <!-- Render All Elements normaly -->  
+  <!-- Render All elements normaly -->  
   <link rel="stylesheet" href="normalize.css">
 
   <!-- Google Fonts -->
